// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`bucket is public 1`] = `
"{
  \\"resource\\": {
    \\"aws_s3_bucket\\": {
      \\"cdktfstack_wingapp_mybucket_5FF05DA9\\": {
        \\"bucket_prefix\\": \\"my-bucket-c870ab9d-\\"
      }
    },
    \\"aws_s3_bucket_policy\\": {
      \\"cdktfstack_wingapp_mybucket_PublicPolicy_676AE553\\": {
        \\"bucket\\": \\"\${aws_s3_bucket.cdktfstack_wingapp_mybucket_5FF05DA9.bucket}\\",
        \\"policy\\": \\"{\\\\\\"Version\\\\\\":\\\\\\"2012-10-17\\\\\\",\\\\\\"Statement\\\\\\":[{\\\\\\"Effect\\\\\\":\\\\\\"Allow\\\\\\",\\\\\\"Principal\\\\\\":\\\\\\"*\\\\\\",\\\\\\"Action\\\\\\":[\\\\\\"s3:GetObject\\\\\\"],\\\\\\"Resource\\\\\\":[\\\\\\"\${aws_s3_bucket.cdktfstack_wingapp_mybucket_5FF05DA9.arn}/*\\\\\\"]}]}\\"
      }
    },
    \\"aws_s3_bucket_server_side_encryption_configuration\\": {
      \\"cdktfstack_wingapp_mybucket_Encryption_FCC8D840\\": {
        \\"bucket\\": \\"\${aws_s3_bucket.cdktfstack_wingapp_mybucket_5FF05DA9.bucket}\\",
        \\"rule\\": [
          {
            \\"apply_server_side_encryption_by_default\\": {
              \\"sse_algorithm\\": \\"AES256\\"
            }
          }
        ]
      }
    }
  }
}"
`;

exports[`bucket is public 2`] = `
Object {
  "tree": Object {
    "children": Object {
      "cdktf-stack": Object {
        "children": Object {
          "backend": Object {
            "constructInfo": Object {
              "fqn": "cdktf.LocalBackend",
              "version": "0.15.1",
            },
            "id": "backend",
            "path": "cdktf-stack/backend",
          },
          "wing-app": Object {
            "children": Object {
              "WingLogger": Object {
                "attributes": Object {
                  "wing:resource:connections": Array [],
                  "wing:resource:stateful": true,
                },
                "constructInfo": Object {
                  "fqn": "constructs.Construct",
                  "version": "10.1.228",
                },
                "display": Object {
                  "description": "A cloud logging facility",
                  "hidden": true,
                  "title": "Logger",
                },
                "id": "WingLogger",
                "path": "cdktf-stack/wing-app/WingLogger",
              },
              "aws": Object {
                "constructInfo": Object {
                  "fqn": "@cdktf/provider-aws.provider.AwsProvider",
                  "version": "12.0.1",
                },
                "id": "aws",
                "path": "cdktf-stack/wing-app/aws",
              },
              "my_bucket": Object {
                "attributes": Object {
                  "wing:resource:connections": Array [],
                  "wing:resource:stateful": true,
                },
                "children": Object {
                  "Default": Object {
                    "constructInfo": Object {
                      "fqn": "@cdktf/provider-aws.s3Bucket.S3Bucket",
                      "version": "12.0.1",
                    },
                    "id": "Default",
                    "path": "cdktf-stack/wing-app/my_bucket/Default",
                  },
                  "Encryption": Object {
                    "constructInfo": Object {
                      "fqn": "@cdktf/provider-aws.s3BucketServerSideEncryptionConfiguration.S3BucketServerSideEncryptionConfigurationA",
                      "version": "12.0.1",
                    },
                    "id": "Encryption",
                    "path": "cdktf-stack/wing-app/my_bucket/Encryption",
                  },
                  "PublicPolicy": Object {
                    "constructInfo": Object {
                      "fqn": "@cdktf/provider-aws.s3BucketPolicy.S3BucketPolicy",
                      "version": "12.0.1",
                    },
                    "id": "PublicPolicy",
                    "path": "cdktf-stack/wing-app/my_bucket/PublicPolicy",
                  },
                },
                "constructInfo": Object {
                  "fqn": "constructs.Construct",
                  "version": "10.1.228",
                },
                "display": Object {
                  "description": "A cloud object store",
                  "title": "Bucket",
                },
                "id": "my_bucket",
                "path": "cdktf-stack/wing-app/my_bucket",
              },
            },
            "constructInfo": Object {
              "fqn": "constructs.Construct",
              "version": "10.1.228",
            },
            "id": "wing-app",
            "path": "cdktf-stack/wing-app",
          },
        },
        "constructInfo": Object {
          "fqn": "cdktf.TerraformStack",
          "version": "0.15.1",
        },
        "id": "cdktf-stack",
        "path": "cdktf-stack",
      },
    },
    "constructInfo": Object {
      "fqn": "cdktf.App",
      "version": "0.15.1",
    },
    "id": "App",
    "path": "",
  },
  "version": "tree-0.1",
}
`;

exports[`bucket prefix must be lowercase 1`] = `
"{
  \\"resource\\": {
    \\"aws_s3_bucket\\": {
      \\"cdktfstack_wingapp_TheUncannyBucket_77F884C9\\": {
        \\"bucket_prefix\\": \\"the-uncanny-bucket-c829d171-\\"
      }
    },
    \\"aws_s3_bucket_public_access_block\\": {
      \\"cdktfstack_wingapp_TheUncannyBucket_PublicAccessBlock_34412166\\": {
        \\"block_public_acls\\": true,
        \\"block_public_policy\\": true,
        \\"bucket\\": \\"\${aws_s3_bucket.cdktfstack_wingapp_TheUncannyBucket_77F884C9.bucket}\\",
        \\"ignore_public_acls\\": true,
        \\"restrict_public_buckets\\": true
      }
    },
    \\"aws_s3_bucket_server_side_encryption_configuration\\": {
      \\"cdktfstack_wingapp_TheUncannyBucket_Encryption_9B5D680D\\": {
        \\"bucket\\": \\"\${aws_s3_bucket.cdktfstack_wingapp_TheUncannyBucket_77F884C9.bucket}\\",
        \\"rule\\": [
          {
            \\"apply_server_side_encryption_by_default\\": {
              \\"sse_algorithm\\": \\"AES256\\"
            }
          }
        ]
      }
    }
  }
}"
`;

exports[`bucket prefix must be lowercase 2`] = `
Object {
  "tree": Object {
    "children": Object {
      "cdktf-stack": Object {
        "children": Object {
          "backend": Object {
            "constructInfo": Object {
              "fqn": "cdktf.LocalBackend",
              "version": "0.15.1",
            },
            "id": "backend",
            "path": "cdktf-stack/backend",
          },
          "wing-app": Object {
            "children": Object {
              "The-Uncanny.Bucket": Object {
                "attributes": Object {
                  "wing:resource:connections": Array [],
                  "wing:resource:stateful": true,
                },
                "children": Object {
                  "Default": Object {
                    "constructInfo": Object {
                      "fqn": "@cdktf/provider-aws.s3Bucket.S3Bucket",
                      "version": "12.0.1",
                    },
                    "id": "Default",
                    "path": "cdktf-stack/wing-app/The-Uncanny.Bucket/Default",
                  },
                  "Encryption": Object {
                    "constructInfo": Object {
                      "fqn": "@cdktf/provider-aws.s3BucketServerSideEncryptionConfiguration.S3BucketServerSideEncryptionConfigurationA",
                      "version": "12.0.1",
                    },
                    "id": "Encryption",
                    "path": "cdktf-stack/wing-app/The-Uncanny.Bucket/Encryption",
                  },
                  "PublicAccessBlock": Object {
                    "constructInfo": Object {
                      "fqn": "@cdktf/provider-aws.s3BucketPublicAccessBlock.S3BucketPublicAccessBlock",
                      "version": "12.0.1",
                    },
                    "id": "PublicAccessBlock",
                    "path": "cdktf-stack/wing-app/The-Uncanny.Bucket/PublicAccessBlock",
                  },
                },
                "constructInfo": Object {
                  "fqn": "constructs.Construct",
                  "version": "10.1.228",
                },
                "display": Object {
                  "description": "A cloud object store",
                  "title": "Bucket",
                },
                "id": "The-Uncanny.Bucket",
                "path": "cdktf-stack/wing-app/The-Uncanny.Bucket",
              },
              "WingLogger": Object {
                "attributes": Object {
                  "wing:resource:connections": Array [],
                  "wing:resource:stateful": true,
                },
                "constructInfo": Object {
                  "fqn": "constructs.Construct",
                  "version": "10.1.228",
                },
                "display": Object {
                  "description": "A cloud logging facility",
                  "hidden": true,
                  "title": "Logger",
                },
                "id": "WingLogger",
                "path": "cdktf-stack/wing-app/WingLogger",
              },
              "aws": Object {
                "constructInfo": Object {
                  "fqn": "@cdktf/provider-aws.provider.AwsProvider",
                  "version": "12.0.1",
                },
                "id": "aws",
                "path": "cdktf-stack/wing-app/aws",
              },
            },
            "constructInfo": Object {
              "fqn": "constructs.Construct",
              "version": "10.1.228",
            },
            "id": "wing-app",
            "path": "cdktf-stack/wing-app",
          },
        },
        "constructInfo": Object {
          "fqn": "cdktf.TerraformStack",
          "version": "0.15.1",
        },
        "id": "cdktf-stack",
        "path": "cdktf-stack",
      },
    },
    "constructInfo": Object {
      "fqn": "cdktf.App",
      "version": "0.15.1",
    },
    "id": "App",
    "path": "",
  },
  "version": "tree-0.1",
}
`;

exports[`bucket prefix valid 1`] = `
"{
  \\"resource\\": {
    \\"aws_s3_bucket\\": {
      \\"cdktfstack_wingapp_theuncannybucket_8491C09C\\": {
        \\"bucket_prefix\\": \\"the-uncanny-bucket-c8609e5d-\\"
      }
    },
    \\"aws_s3_bucket_public_access_block\\": {
      \\"cdktfstack_wingapp_theuncannybucket_PublicAccessBlock_C1243645\\": {
        \\"block_public_acls\\": true,
        \\"block_public_policy\\": true,
        \\"bucket\\": \\"\${aws_s3_bucket.cdktfstack_wingapp_theuncannybucket_8491C09C.bucket}\\",
        \\"ignore_public_acls\\": true,
        \\"restrict_public_buckets\\": true
      }
    },
    \\"aws_s3_bucket_server_side_encryption_configuration\\": {
      \\"cdktfstack_wingapp_theuncannybucket_Encryption_C4B61E8F\\": {
        \\"bucket\\": \\"\${aws_s3_bucket.cdktfstack_wingapp_theuncannybucket_8491C09C.bucket}\\",
        \\"rule\\": [
          {
            \\"apply_server_side_encryption_by_default\\": {
              \\"sse_algorithm\\": \\"AES256\\"
            }
          }
        ]
      }
    }
  }
}"
`;

exports[`bucket prefix valid 2`] = `
Object {
  "tree": Object {
    "children": Object {
      "cdktf-stack": Object {
        "children": Object {
          "backend": Object {
            "constructInfo": Object {
              "fqn": "cdktf.LocalBackend",
              "version": "0.15.1",
            },
            "id": "backend",
            "path": "cdktf-stack/backend",
          },
          "wing-app": Object {
            "children": Object {
              "WingLogger": Object {
                "attributes": Object {
                  "wing:resource:connections": Array [],
                  "wing:resource:stateful": true,
                },
                "constructInfo": Object {
                  "fqn": "constructs.Construct",
                  "version": "10.1.228",
                },
                "display": Object {
                  "description": "A cloud logging facility",
                  "hidden": true,
                  "title": "Logger",
                },
                "id": "WingLogger",
                "path": "cdktf-stack/wing-app/WingLogger",
              },
              "aws": Object {
                "constructInfo": Object {
                  "fqn": "@cdktf/provider-aws.provider.AwsProvider",
                  "version": "12.0.1",
                },
                "id": "aws",
                "path": "cdktf-stack/wing-app/aws",
              },
              "the-uncanny.bucket": Object {
                "attributes": Object {
                  "wing:resource:connections": Array [],
                  "wing:resource:stateful": true,
                },
                "children": Object {
                  "Default": Object {
                    "constructInfo": Object {
                      "fqn": "@cdktf/provider-aws.s3Bucket.S3Bucket",
                      "version": "12.0.1",
                    },
                    "id": "Default",
                    "path": "cdktf-stack/wing-app/the-uncanny.bucket/Default",
                  },
                  "Encryption": Object {
                    "constructInfo": Object {
                      "fqn": "@cdktf/provider-aws.s3BucketServerSideEncryptionConfiguration.S3BucketServerSideEncryptionConfigurationA",
                      "version": "12.0.1",
                    },
                    "id": "Encryption",
                    "path": "cdktf-stack/wing-app/the-uncanny.bucket/Encryption",
                  },
                  "PublicAccessBlock": Object {
                    "constructInfo": Object {
                      "fqn": "@cdktf/provider-aws.s3BucketPublicAccessBlock.S3BucketPublicAccessBlock",
                      "version": "12.0.1",
                    },
                    "id": "PublicAccessBlock",
                    "path": "cdktf-stack/wing-app/the-uncanny.bucket/PublicAccessBlock",
                  },
                },
                "constructInfo": Object {
                  "fqn": "constructs.Construct",
                  "version": "10.1.228",
                },
                "display": Object {
                  "description": "A cloud object store",
                  "title": "Bucket",
                },
                "id": "the-uncanny.bucket",
                "path": "cdktf-stack/wing-app/the-uncanny.bucket",
              },
            },
            "constructInfo": Object {
              "fqn": "constructs.Construct",
              "version": "10.1.228",
            },
            "id": "wing-app",
            "path": "cdktf-stack/wing-app",
          },
        },
        "constructInfo": Object {
          "fqn": "cdktf.TerraformStack",
          "version": "0.15.1",
        },
        "id": "cdktf-stack",
        "path": "cdktf-stack",
      },
    },
    "constructInfo": Object {
      "fqn": "cdktf.App",
      "version": "0.15.1",
    },
    "id": "App",
    "path": "",
  },
  "version": "tree-0.1",
}
`;

exports[`create a bucket 1`] = `
"{
  \\"resource\\": {
    \\"aws_s3_bucket\\": {
      \\"cdktfstack_wingapp_mybucket_5FF05DA9\\": {
        \\"bucket_prefix\\": \\"my-bucket-c870ab9d-\\"
      }
    },
    \\"aws_s3_bucket_public_access_block\\": {
      \\"cdktfstack_wingapp_mybucket_PublicAccessBlock_2B2E0E5F\\": {
        \\"block_public_acls\\": true,
        \\"block_public_policy\\": true,
        \\"bucket\\": \\"\${aws_s3_bucket.cdktfstack_wingapp_mybucket_5FF05DA9.bucket}\\",
        \\"ignore_public_acls\\": true,
        \\"restrict_public_buckets\\": true
      }
    },
    \\"aws_s3_bucket_server_side_encryption_configuration\\": {
      \\"cdktfstack_wingapp_mybucket_Encryption_FCC8D840\\": {
        \\"bucket\\": \\"\${aws_s3_bucket.cdktfstack_wingapp_mybucket_5FF05DA9.bucket}\\",
        \\"rule\\": [
          {
            \\"apply_server_side_encryption_by_default\\": {
              \\"sse_algorithm\\": \\"AES256\\"
            }
          }
        ]
      }
    }
  }
}"
`;

exports[`create a bucket 2`] = `
Object {
  "tree": Object {
    "children": Object {
      "cdktf-stack": Object {
        "children": Object {
          "backend": Object {
            "constructInfo": Object {
              "fqn": "cdktf.LocalBackend",
              "version": "0.15.1",
            },
            "id": "backend",
            "path": "cdktf-stack/backend",
          },
          "wing-app": Object {
            "children": Object {
              "WingLogger": Object {
                "attributes": Object {
                  "wing:resource:connections": Array [],
                  "wing:resource:stateful": true,
                },
                "constructInfo": Object {
                  "fqn": "constructs.Construct",
                  "version": "10.1.228",
                },
                "display": Object {
                  "description": "A cloud logging facility",
                  "hidden": true,
                  "title": "Logger",
                },
                "id": "WingLogger",
                "path": "cdktf-stack/wing-app/WingLogger",
              },
              "aws": Object {
                "constructInfo": Object {
                  "fqn": "@cdktf/provider-aws.provider.AwsProvider",
                  "version": "12.0.1",
                },
                "id": "aws",
                "path": "cdktf-stack/wing-app/aws",
              },
              "my_bucket": Object {
                "attributes": Object {
                  "wing:resource:connections": Array [],
                  "wing:resource:stateful": true,
                },
                "children": Object {
                  "Default": Object {
                    "constructInfo": Object {
                      "fqn": "@cdktf/provider-aws.s3Bucket.S3Bucket",
                      "version": "12.0.1",
                    },
                    "id": "Default",
                    "path": "cdktf-stack/wing-app/my_bucket/Default",
                  },
                  "Encryption": Object {
                    "constructInfo": Object {
                      "fqn": "@cdktf/provider-aws.s3BucketServerSideEncryptionConfiguration.S3BucketServerSideEncryptionConfigurationA",
                      "version": "12.0.1",
                    },
                    "id": "Encryption",
                    "path": "cdktf-stack/wing-app/my_bucket/Encryption",
                  },
                  "PublicAccessBlock": Object {
                    "constructInfo": Object {
                      "fqn": "@cdktf/provider-aws.s3BucketPublicAccessBlock.S3BucketPublicAccessBlock",
                      "version": "12.0.1",
                    },
                    "id": "PublicAccessBlock",
                    "path": "cdktf-stack/wing-app/my_bucket/PublicAccessBlock",
                  },
                },
                "constructInfo": Object {
                  "fqn": "constructs.Construct",
                  "version": "10.1.228",
                },
                "display": Object {
                  "description": "A cloud object store",
                  "title": "Bucket",
                },
                "id": "my_bucket",
                "path": "cdktf-stack/wing-app/my_bucket",
              },
            },
            "constructInfo": Object {
              "fqn": "constructs.Construct",
              "version": "10.1.228",
            },
            "id": "wing-app",
            "path": "cdktf-stack/wing-app",
          },
        },
        "constructInfo": Object {
          "fqn": "cdktf.TerraformStack",
          "version": "0.15.1",
        },
        "id": "cdktf-stack",
        "path": "cdktf-stack",
      },
    },
    "constructInfo": Object {
      "fqn": "cdktf.App",
      "version": "0.15.1",
    },
    "id": "App",
    "path": "",
  },
  "version": "tree-0.1",
}
`;
